<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".shop.ui.products.add.AddProductScreen">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"

                android:orientation="vertical">


                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/backBtn"
                    android:src="@mipmap/back_btn" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_170sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:contentDescription="@string/logo"
                        android:scaleType="fitCenter"
                        android:src="@drawable/add_products">

                    </ImageView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|top"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif"
                            android:text="@string/addProduct"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_20sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/addProduct_purpose1"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/_10sdp" />


                    </LinearLayout>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/tailLightCat"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_6sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray">

                        <ImageView
                            android:id="@+id/productImg"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/grayBg"
                            android:contentDescription="@string/img"
                            android:padding="@dimen/_20sdp"
                            android:src="@drawable/ic_add_a_photo_black_24dp" />


                    </RelativeLayout>


                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/errorTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/productName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:autofillHints="@string/productName"
                    android:background="@drawable/et_curves_gray_bg"
                    android:gravity="center"
                    android:hint="@string/productName"
                    android:inputType="text"
                    android:maxLength="40"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/etTextColor"
                    android:textSize="@dimen/_14sdp" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:fontFamily="sans-serif"
                        android:text="@string/compatibleWith"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/mercedesCB"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:fontFamily="@font/actor"
                        android:paddingLeft="@dimen/_3sdp"
                        android:text="@string/mercedes"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/bmwCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:fontFamily="@font/actor"
                        android:paddingLeft="@dimen/_3sdp"
                        android:text="@string/bmw"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chevroletCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:fontFamily="@font/actor"
                        android:paddingLeft="@dimen/_3sdp"
                        android:text="@string/chevrolet"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/loganCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:fontFamily="@font/actor"
                        android:paddingLeft="@dimen/_3sdp"
                        android:text="@string/logan"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/productPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:autofillHints="@string/productPrice"
                        android:background="@drawable/et_curves_gray_bg"
                        android:gravity="center"
                        android:hint="@string/productPrice"
                        android:inputType="number"
                        android:maxLength="6"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/etTextColor"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:padding="@dimen/_10sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/le"
                        android:textColor="@color/etTextColor"
                        android:textSize="@dimen/_14sdp"/>


                </LinearLayout>
                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/btn_curves_blue_bg"
                    android:contentDescription="@string/signIn"
                    android:fontFamily="sans-serif"
                    android:padding="@dimen/_7sdp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>


    </RelativeLayout>
</layout>