<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.carapp.group.alpha.carapp.shop.ui.setting.SettingScreen">


        <FrameLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="@dimen/_15sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/backBtn"
                android:src="@mipmap/back_btn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/setting"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />


        </FrameLayout>

        <LinearLayout
            android:layout_margin="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_below="@+id/bar"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/tailLightCat"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_6sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray">

                    <ImageView
                        android:id="@+id/shopImg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/grayBg"
                        android:contentDescription="@string/img"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_add_a_photo_black_24dp" />

                    <ImageView
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:id="@+id/addImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/img"
                        android:scaleType="fitXY"
                        android:src="@mipmap/add_pic_ic" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/errorTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/_10sdp" />

            <EditText
                android:id="@+id/shopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:autofillHints="@string/shopName"
                android:background="@drawable/et_curves_gray_bg"
                android:gravity="center"
                android:hint="@string/shopName"
                android:inputType="text"
                android:maxLength="40"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/etTextColor"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/btn_curves_blue_bg"
                android:contentDescription="@string/signIn"
                android:fontFamily="sans-serif"
                android:padding="@dimen/_7sdp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>
</layout>