<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.carapp.group.alpha.carapp.user.ui.home.fragment.shop.ShopFragmentScreen">

        <LinearLayout

            android:id="@+id/connectionLin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:src="@drawable/no_interenet_connection" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/noInternetConnection"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/retryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_10sdp"
                android:background="@android:color/holo_red_dark"
                android:fontFamily="sans-serif"
                android:padding="@dimen/_5sdp"
                android:text="@string/retry"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/emptyDataLin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/empty_ic"
                tools:ignore="VectorDrawableCompat"
                tools:srcCompat="@drawable/empty_ic" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="sans-serif"
                android:text="@string/emptyData_purpose1"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_10sdp" />


        </LinearLayout>


        <RelativeLayout
            android:id="@+id/showDataLin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/shopRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />




        </RelativeLayout>

    </RelativeLayout>
</layout>
